src/test/resources/Parser/SyntaxErrors/UndeclaredVariableWhere.front
class A<T>:
    where T > int32
    where S > int32